--- a/experiments/notebooks/01-jointformer-training.ipynb
+++ b/experiments/notebooks/01-jointformer-training.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,15 +65,15 @@
     "DATA_DIR = '/home/adamizdebski/files/data'\n",
     "OUTPUT_DIR = '/home/adamizdebski/files/jointformer/results/finetune'\n",
     "\n",
-    "PATH_TO_DATASET_CONFIG   = '/home/adamizdebski/projects/jointformer/configs/datasets/molecule_net/scaffold/lipo'\n",
-    "PATH_TO_TOKENIZER_CONFIG = '/home/adamizdebski/projects/jointformer/configs/tokenizers/gpt_tokenizer'\n",
-    "PATH_TO_MODEL_CONFIG = '/home/adamizdebski/projects/jointformer/configs/models/joint_gpt_prediction'\n",
+    "PATH_TO_DATASET_CONFIG   = '/home/adamizdebski/projects/jointformer/configs/datasets/guacamol/physchem'\n",
+    "PATH_TO_TOKENIZER_CONFIG = '/home/adamizdebski/projects/jointformer/configs/tokenizers/smiles_separate_task_token'\n",
+    "PATH_TO_MODEL_CONFIG = '/home/adamizdebski/projects/jointformer/configs/models/jointformer_v2'\n",
     "PATH_TO_TRAINER_CONFIG = '/home/adamizdebski/projects/jointformer/configs/trainers/test'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of parameters: 6.45M\n"
+      "number of parameters: 6.72M\n"
      ]
     }
    ],
@@ -111,57 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "JointGPTForDownstreamPrediction(\n",
-       "  (transformer): ModuleDict(\n",
-       "    (wte): Embedding(593, 256)\n",
-       "    (wpe): Embedding(128, 256)\n",
-       "    (drop): Dropout(p=0.1, inplace=False)\n",
-       "    (h): ModuleList(\n",
-       "      (0-7): 8 x Block(\n",
-       "        (ln_1): LayerNorm()\n",
-       "        (attn): CausalSelfAttention(\n",
-       "          (c_attn): Linear(in_features=256, out_features=768, bias=False)\n",
-       "          (c_proj): Linear(in_features=256, out_features=256, bias=False)\n",
-       "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
-       "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
-       "        )\n",
-       "        (ln_2): LayerNorm()\n",
-       "        (mlp): MLP(\n",
-       "          (c_fc): Linear(in_features=256, out_features=1024, bias=False)\n",
-       "          (gelu): GELU(approximate='none')\n",
-       "          (c_proj): Linear(in_features=1024, out_features=256, bias=False)\n",
-       "          (dropout): Dropout(p=0.1, inplace=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (ln_f): LayerNorm()\n",
-       "  )\n",
-       "  (lm_head): Linear(in_features=256, out_features=593, bias=False)\n",
-       "  (downstream_prediction_task_head): DownstreamPredictionHead(\n",
-       "    (mlp): Linear(in_features=256, out_features=256, bias=True)\n",
-       "    (last_layer): Linear(in_features=256, out_features=1, bias=False)\n",
-       "  )\n",
-       ")"
+       "ModelConfig({'model_name': 'JointformerV2', 'embedding_dim': 256, 'embedding_hidden_dim': 1024, 'num_heads': 8, 'num_local_heads': 8, 'head_dim': 32, 'num_layers': 8, 'bias': False, 'attention_dropout': None, 'feed_forward_dropout': None, 'prediction_dropout': None, 'layer_norm_eps': 1e-05, 'vocab_size': 596, 'max_seq_len': 128, 'prediction_task_type': None, 'num_prediction_tasks': None, 'num_physchem_tasks': 200, 'pretrained_filepath': None, 'predictor_hidden_size': None, 'predictor_dropout': None, 'predictor_num_heads': None, 'prediction_hidden_dim': 256, 'set_separate_task_tokens': None, 'flash_attention': True, 'dropout': 0.1, 'lambda_hparam': None, 'block_size': 128, 'n_embd': 256, 'n_layer': 8, 'n_head': 8, 'num_props': 200})"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model"
+    "model_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -180,13 +150,14 @@
     "    model=model,\n",
     "    train_dataset=train_dataset,\n",
     "    val_dataset=val_dataset,\n",
+    "    test_dataset=val_dataset,\n",
     "    tokenizer=tokenizer\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,78 +166,107 @@
     "batch = next(iter(trainer.train_loader))\n",
     "batch.to('cuda')\n",
     "model.to('cuda')\n",
+    "batch['task'] = 'physchem'\n",
     "outputs = model(**batch)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 127])\n",
+      "torch.Size([2, 127, 596])\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = tokenizer([train_dataset[idx] for idx in range(2)], task='generation')\n",
+    "inputs = inputs.to('cuda')\n",
+    "model_outputs = model.get_loss(**inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'token_embeddings': tensor([[[-0.0523, -0.0435, -0.0128,  ..., -0.0171, -0.0043,  0.0739],\n",
-       "          [ 0.0247, -0.0027,  0.0099,  ..., -0.0462,  0.0014, -0.0134],\n",
-       "          [ 0.0404,  0.0254, -0.0292,  ...,  0.0226,  0.0302,  0.0122],\n",
+       "{'token_embeddings': tensor([[[-4.3458e-02, -6.9468e-04,  4.2362e-02,  ...,  2.1533e-02,\n",
+       "           -6.0646e-02, -3.4861e-02],\n",
+       "          [ 6.0578e-03, -4.7434e-02,  1.6648e-02,  ..., -7.4538e-03,\n",
+       "            3.6801e-02,  1.7726e-02],\n",
+       "          [-1.5884e-02, -8.6445e-03, -5.5961e-02,  ...,  1.6495e-02,\n",
+       "            1.9452e-02, -1.6902e-02],\n",
        "          ...,\n",
-       "          [ 0.0059, -0.0195,  0.0278,  ..., -0.0457, -0.0063, -0.0160],\n",
-       "          [ 0.0143,  0.0149,  0.0547,  ..., -0.0321, -0.0021,  0.0379],\n",
-       "          [ 0.0040, -0.0210,  0.0362,  ..., -0.0282,  0.0392,  0.0006]],\n",
+       "          [ 2.8788e-02,  1.5539e-05,  5.0084e-02,  ..., -1.2208e-02,\n",
+       "           -5.4630e-03,  1.4062e-02],\n",
+       "          [ 1.9007e-03,  8.4405e-03,  1.3463e-02,  ..., -5.4869e-03,\n",
+       "            2.1876e-02,  8.2266e-03],\n",
+       "          [ 3.1826e-02,  2.3824e-03, -1.7455e-02,  ..., -9.0177e-03,\n",
+       "            8.7530e-03,  4.6899e-02]],\n",
        " \n",
-       "         [[-0.0523, -0.0435, -0.0128,  ..., -0.0171, -0.0043,  0.0739],\n",
-       "          [ 0.0419,  0.0254,  0.0354,  ..., -0.0138,  0.0017,  0.0224],\n",
-       "          [ 0.0251,  0.0234, -0.0165,  ..., -0.0135,  0.0274, -0.0064],\n",
+       "         [[-4.3458e-02, -6.9468e-04,  4.2362e-02,  ...,  2.1533e-02,\n",
+       "           -6.0646e-02, -3.4861e-02],\n",
+       "          [ 6.0578e-03, -4.7434e-02,  1.6648e-02,  ..., -7.4538e-03,\n",
+       "            3.6801e-02,  1.7726e-02],\n",
+       "          [ 3.9049e-02,  3.8860e-02, -1.8694e-02,  ..., -3.8230e-02,\n",
+       "            2.5005e-02, -1.6724e-02],\n",
        "          ...,\n",
-       "          [ 0.0059, -0.0195,  0.0278,  ..., -0.0457, -0.0063, -0.0160],\n",
-       "          [ 0.0143,  0.0149,  0.0547,  ..., -0.0321, -0.0021,  0.0379],\n",
-       "          [ 0.0040, -0.0210,  0.0362,  ..., -0.0282,  0.0392,  0.0006]]],\n",
-       "        device='cuda:0', grad_fn=<AddBackward0>),\n",
-       " 'embeddings': tensor([[[ 0.8558, -1.2975,  0.0984,  ..., -0.7168,  1.0190,  2.1529],\n",
-       "          [ 1.3939, -0.3052, -0.1493,  ..., -0.4674,  0.2266, -0.7072],\n",
-       "          [ 0.3334, -0.1243, -0.2324,  ...,  0.5195, -0.6360,  0.7859],\n",
+       "          [ 2.8788e-02,  1.5539e-05,  5.0084e-02,  ..., -1.2208e-02,\n",
+       "           -5.4630e-03,  1.4062e-02],\n",
+       "          [ 1.9007e-03,  8.4405e-03,  1.3463e-02,  ..., -5.4869e-03,\n",
+       "            2.1876e-02,  8.2266e-03],\n",
+       "          [ 3.1826e-02,  2.3824e-03, -1.7455e-02,  ..., -9.0177e-03,\n",
+       "            8.7530e-03,  4.6899e-02]]], device='cuda:0', grad_fn=<AddBackward0>),\n",
+       " 'embeddings': tensor([[[-0.9771,  1.0420, -0.6971,  ...,  1.5374, -1.1249, -0.6144],\n",
+       "          [ 0.4173, -0.0699, -0.2298,  ...,  1.1151, -0.3546,  1.2022],\n",
+       "          [-0.1939,  0.3214, -0.8914,  ..., -0.0154, -0.1379, -0.1688],\n",
        "          ...,\n",
-       "          [ 0.6399,  0.5602,  2.3830,  ...,  0.9579,  1.1553, -1.5289],\n",
-       "          [ 0.1585,  1.0242, -0.3480,  ...,  0.5608,  0.6963,  0.4210],\n",
-       "          [-0.9652,  1.0408,  0.5340,  ...,  0.8708,  1.0534, -0.6926]],\n",
+       "          [ 1.9206,  1.4054,  0.3847,  ...,  0.5272, -0.5685, -0.0699],\n",
+       "          [ 0.4297,  0.6051, -0.2229,  ..., -0.0588,  0.6277, -0.2607],\n",
+       "          [ 1.6617,  0.0611, -1.5267,  ...,  0.0245,  0.2586, -0.8183]],\n",
        " \n",
-       "         [[ 1.2864, -0.5005, -0.3110,  ...,  0.1252,  0.5834,  1.7644],\n",
-       "          [ 1.6273, -0.7639,  0.4941,  ...,  0.4840,  0.3234,  1.1641],\n",
-       "          [ 0.6154, -1.8919, -0.0352,  ..., -0.9556,  0.8479,  1.4458],\n",
+       "         [[-1.1868,  0.3865, -0.8856,  ...,  1.9093, -1.0215, -1.9039],\n",
+       "          [ 0.0053, -0.2768, -0.6169,  ...,  1.7274, -1.0741,  0.7358],\n",
+       "          [ 0.2155,  0.5429, -2.5543,  ...,  0.0299, -0.7034, -0.4374],\n",
        "          ...,\n",
-       "          [-0.6621,  0.7942,  1.9641,  ...,  1.3431,  1.6208, -1.2544],\n",
-       "          [ 0.4114,  1.4765,  0.3699,  ...,  0.5236,  0.2547,  0.1218],\n",
-       "          [-1.4796,  1.2021,  1.0562,  ...,  1.1896,  0.8947,  0.0102]]],\n",
+       "          [ 1.8818,  1.5685,  0.2419,  ...,  0.9611, -0.7160, -0.6196],\n",
+       "          [ 0.9342,  0.3884, -0.8860,  ...,  0.4063,  0.8289,  0.3573],\n",
+       "          [ 0.7060, -0.5473, -2.0597,  ...,  1.8053,  0.7888, -0.7820]]],\n",
        "        device='cuda:0', grad_fn=<NativeLayerNormBackward0>),\n",
-       " 'logits': tensor([[[-0.0491,  0.2310,  0.5288,  ..., -0.3160,  0.1049,  0.7305],\n",
-       "          [ 0.0715,  0.0200,  0.1033,  ...,  0.2580,  0.2004, -0.3123],\n",
-       "          [ 0.3338,  0.2086,  0.8295,  ...,  0.1032,  0.2270,  0.0475],\n",
+       " 'logits': tensor([[[ 0.0940,  0.1308, -0.6652,  ...,  0.8454,  0.4527, -0.2400],\n",
+       "          [ 0.3778,  0.2187,  0.1940,  ...,  0.1819, -0.1752, -0.0755],\n",
+       "          [-0.0129,  0.1825, -0.3737,  ..., -0.0445,  0.1329,  0.2673],\n",
        "          ...,\n",
-       "          [ 1.4461, -0.3730,  0.3009,  ..., -0.0853,  0.6504,  0.0146],\n",
-       "          [ 1.4650, -0.5073,  0.6628,  ...,  0.0527,  0.7107,  0.1306],\n",
-       "          [ 1.1848, -0.0200,  1.2887,  ...,  0.2943,  0.6957,  0.2126]],\n",
+       "          [ 1.3207, -0.2830, -0.0629,  ...,  0.2327, -0.5292,  0.0744],\n",
+       "          [ 0.7430, -0.2932,  0.0988,  ...,  0.2175, -0.1048,  0.1843],\n",
+       "          [ 1.1430, -0.0695,  0.3197,  ...,  0.0051, -0.4150,  0.0805]],\n",
        " \n",
-       "         [[ 0.5691, -0.2069,  0.6940,  ..., -0.0567,  0.1826,  0.8871],\n",
-       "          [ 0.4447,  0.2300,  0.5450,  ...,  0.0272,  0.3835,  0.1752],\n",
-       "          [ 0.1821,  0.0827,  0.4096,  ..., -0.0352,  0.2274,  0.4877],\n",
+       "         [[-0.2408, -0.3624,  0.0530,  ...,  0.4881,  0.2475, -0.0212],\n",
+       "          [ 0.2802, -0.1463,  0.4932,  ..., -0.0281, -0.1986, -0.1217],\n",
+       "          [ 0.0521, -0.0714,  0.2612,  ..., -0.2984, -0.1196,  0.0879],\n",
        "          ...,\n",
-       "          [ 1.2959, -0.5850,  0.3423,  ...,  0.1735,  0.6640, -0.0739],\n",
-       "          [ 1.7328, -0.3177,  0.8592,  ...,  0.4384,  1.0076,  0.1961],\n",
-       "          [ 1.4587, -0.4050,  0.8792,  ...,  0.0775,  0.5470, -0.0971]]],\n",
+       "          [ 0.6753, -0.3763, -0.1662,  ...,  0.2221, -0.5709, -0.1069],\n",
+       "          [ 0.8384, -0.1395, -0.0249,  ...,  0.4949,  0.1140,  0.1707],\n",
+       "          [ 1.0675,  0.0739,  0.2001,  ..., -0.2069, -0.1027,  0.1602]]],\n",
        "        device='cuda:0', grad_fn=<CloneBackward0>),\n",
-       " 'loss': tensor(6.6305, device='cuda:0', grad_fn=<AddBackward0>),\n",
-       " 'logits_prediction': tensor([[-0.0116],\n",
-       "         [-0.0301]], device='cuda:0', grad_fn=<MmBackward0>),\n",
-       " 'predictive_loss': tensor(0.6614, device='cuda:0', grad_fn=<MseLossBackward0>)}"
+       " 'loss': tensor(6.3293, device='cuda:0', grad_fn=<NllLossBackward0>)}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.get_loss(**batch)"
+    "outputs"
    ]
   },
   {
