--- a/experiments/notebooks/99-ood-detection.ipynb
+++ b/experiments/notebooks/99-ood-detection.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "from jointformer.utils.runtime import set_seed, create_output_dir, set_to_dev_mode, log_args, dump_configs\n",
     "from jointformer.utils.ddp import init_ddp, end_ddp\n",
-    "from jointformer.utils.data_collators import DataCollator\n",
+    "from jointformer.utils.collator import DataCollator\n",
     "from tqdm import tqdm\n",
     "\n",
     "%load_ext autoreload\n",
