--- a/experiments/notebooks/01-jointformer-training.ipynb
+++ b/experiments/notebooks/01-jointformer-training.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -46,36 +46,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set working directory of the project\n",
     "\n",
-    "REPOSITORY_DIR = '/home/adamizdebski/projects/jointformer'\n",
+    "REPOSITORY_DIR = '/home/aih/adam.izdebski/project/jointformer-interface/jointformer'\n",
     "os.chdir(REPOSITORY_DIR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configs\n",
     "\n",
-    "DATA_DIR = '/home/adamizdebski/projects/jointformer/data/'\n",
-    "OUTPUT_DIR = '/home/adamizdebski/projects/jointformer/results/finetune'\n",
+    "DATA_DIR = '/lustre/groups/aih/jointformer/icml25/data'\n",
+    "OUTPUT_DIR = '/lustre/groups/aih/jointformer/icml25/results'\n",
     "\n",
-    "PATH_TO_DATASET_CONFIG   = '/home/adamizdebski/projects/jointformer/configs/datasets/hi/drd2/config.json'\n",
-    "PATH_TO_TOKENIZER_CONFIG = '/home/adamizdebski/projects/jointformer/configs/tokenizers/smiles_separate_task_token/config.json'\n",
-    "PATH_TO_MODEL_CONFIG = '/home/adamizdebski/projects/jointformer/configs/models/jointformer_v2_prediction/config.json'\n",
-    "PATH_TO_TRAINER_CONFIG = '/home/adamizdebski/projects/jointformer/configs/trainers/test/config.json'"
+    "ROOT_DIR = '/lustre/groups/aih/jointformer/icml25/data'\n",
+    "PATH_TO_DATASET_CONFIG   = 'configs/datasets/guacamol/config.json'\n",
+    "PATH_TO_TOKENIZER_CONFIG = 'configs/tokenizers/smiles_separate_task_token_guacamol/config.json'\n",
+    "PATH_TO_MODEL_CONFIG = 'configs/models/jointformer_v2_prediction/config.json'\n",
+    "PATH_TO_TRAINER_CONFIG = 'configs/trainers/test/config.json'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +99,99 @@
     "test_dataset = AutoDataset.from_config(dataset_config, root=DATA_DIR, split='test')\n",
     "\n",
     "tokenizer = AutoTokenizer.from_config(tokenizer_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.mask_token_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.auto import tqdm\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1273104/1273104 [05:39<00:00, 3749.76it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in tqdm(range(len(train_dataset))):\n",
+    "    x = train_dataset[idx][0]\n",
+    "    input_ids = tokenizer(x, task='generation')['input_ids']\n",
+    "    if tokenizer.mask_token_id in input_ids:\n",
+    "        print(idx)\n",
+    "        print(x)\n",
+    "        print(tokenizer(x, task='generation')['input_ids'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "15 in input_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2"
    ]
   },
   {
@@ -476,7 +570,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jointformer-experiments",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -490,7 +584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
